@@ -6,3 +6,4 @@
 2024-05-28T13:27:49.623Z |            1.0.3 | fix
 2024-05-28T13:43:03.111Z |            1.1.0 | badge improvement
 2024-05-29T11:00:20.005Z |            1.1.1 | Badge improvements
+2024-06-07T10:05:40.722Z |            1.2.0 | dataset values from multiple registered items
